--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -47,11 +47,20 @@
         <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto ">
         <% if (currentZombie){%>
-        <li class="nav-item active">
+        <li class="nav-item ">
             <a class="nav-link" href="/edit">Hola,<%= currentZombie.name() %></a>
         </li>
+        <li class="nav-item ">
+        <a class="nav-link" href="/edit">Hola,<%= currentZombie.rol() %></a>
+        </li>
         <li class="nav-item">
-            <a class="nav-link" href="/logout">Registrar Usuario</a>
+            <a class="nav-link" href="/logout">Cerrar Sesion</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/creategun">Registrar Arma</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/weapons">Mostrar Armas</a>
         </li>
         <%}else{%>
         <li class="nav-item">
@@ -60,12 +69,7 @@
         <li class="nav-item">
             <a class="nav-link" href="/signup">Registrar Usuario</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/creategun">Registrar Arma</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/weapons">Mostrar Armas</a>
-        </li>
+        
         <% } %>
         </ul>
         <span class="navbar-text">
@@ -101,13 +105,25 @@
     </div>
 </nav>
 <div class="container">
-    <% errors.forEach(function(error){%>
-        <div class="alert alert-danger" role="alert">
-            <%=error%>
-        </div>
-        <% }) %>
-        <% infos.forEach(function(info){ %>
-            <div class="alert alert-info" role="alert">
-                <%=info %>
+   <!-- <% errors.forEach(function(error){ %>
+    <div class="alert alert-danger" role="alert">
+    <%= error %>
+    </div>
+    <% }) %>
+    <% infos.forEach(function(info){ %>
+    <div class="alert alert-info" role="alert">
+    <%= info %>
+    </div>
+    <% }) %>-->
+    <% errors.forEach(function(error) { %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
             </div>
-            <% }) %>
+        <% }) %>
+        <% infos.forEach(function(info) { %>
+            <div class="alert alert-info" role="alert">
+                <%= info %>
+            </div>
+        <% }) %>
+
+
