--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,6 +15,17 @@
         <input name="password" type="password" class="form-control" placeholder="Contraseña" required/>
         </div>
     </div>
+    <div class="form-group row">
+    <label class="col-md-1">Elija la opcion:</label>
+    <div class="col-md-4">
+        <select name="role" class="form-control" id="exampleFormControlSelect1">
+            <option value="zombie-king">Zombie-king</option>
+            <option value="zombie-queen">Zombie-queen</option>
+            <option value="zombie-boss">Zombie-boss</option>
+            <option value="zombie">Zombie</option>
+        </select>
+    </div>
+  </div>
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-2">
